[package]
name = "jati"
version = "0.1.0"
edition = "2021"
author = "Jūlija Pečerska <julija.pecerska@zhaw.ch>"
about = "Joint Alignment and Tree Inference (but just IndelMAP_MSA for now)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1.0.0"
nalgebra = "0.31"
approx = "0.5"
anyhow = "1.0.0"
rstest = "0.16.0"
rand = "0.8"
pest = "2.5.7"
pest_derive = "2"
ordered-float = "3.7.0"
assert_float_eq = "1.1.3"
clap = { version = "4.3.11", features = ["derive"] }
log = "0.4.19"
pretty_env_logger = "0.4"
assert_matches = "1.5"
chrono = "0.4.26"
