[package]
name = "jati"
version = "0.1.0"
edition = "2021"
authors = ["Jūlija Pečerska <julija.pecerska@zhaw.ch>"]
description = "Joint Alignment and Tree Inference"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.3.11", features = ["derive"] }
log = "0.4.19"
ftail = "0.2.0"
chrono = "0.4.26"
stats-cli = "3.0.1"
phylo = { path = "../rust-phylo/phylo" }
anyhow = "1.0.86"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
