[package]
name = "phylo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
approx = "0.5.1"
assert_matches = "1.5.0"
bio = "1.3.1"
log = "0.4.19"
nalgebra = "0.32.3"
ordered-float = "3.7.0"
pest = "2.7.2"
pest_derive = "2.7.2"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rstest = "0.18.1"
stats-cli = "3.0.1"
tempfile = "3.8.0"
