[package]
name = "phylo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ci_coverage = []

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 3

[dependencies]
anyhow = "1.0.72"
approx = "0.5.1"
argmin = "0.8.1"
assert_matches = "1.5.0"
bio = "1.3.1"
bitvec = "1.0.1"
clap = { version = "4.5.28", features = ["derive"] }
dyn-clone = "1.0.18"
ftail = "0.2.0"
hashbrown = "0.15.2"
itertools = "0.14.0"
lazy_static = "1.4.0"
log = "0.4.19"
nalgebra = "0.32.3"
ordered-float = "3.7.0"
pest = "2.7.2"
pest_derive = "2.7.2"
rand = "0.8.5"
rstest = "0.18.1"
stats-cli = "3.0.1"
tempfile = "3.8.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
