[package]
name = "phylo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ci_coverage = []
deterministic = []
# Feature that can speed up repeated test runs for when tree search is not affected and tests are ran locally.
use-precomputed-test-results = []
par-regraft = ["dep:rayon"]
par-regraft-chunk = ["dep:rayon"]
par-regraft-manual = ["dep:rayon"]

[lib]
bench = false

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

# inherits from release
[profile.bench]
debug = true


[dependencies]
anyhow = "1.0.72"
approx = "0.5.1"
argmin = "0.8.1"
assert_matches = "1.5.0"
bio = "1.3.1"
bitvec = "1.0.1"
bumpalo = "3.17.0"
bytemuck = { version = "1.23.0", features = ["derive"] }
cfg-if = "1.0.0"
clap = { version = "4.5.28", features = ["derive"] }
dyn-clone = "1.0.18"
fixedbitset = "0.5.7"
ftail = "0.2.0"
hashbrown = "0.15.2"
itertools = "0.14.0"
lazy_static = "1.4.0"
libc = "0.2.172"
log = "0.4.19"
# NOTE: mutli threaded kernels for matrix multiplication are available
# through the matrixmultiply peer-dep
nalgebra = "0.32.3"
ordered-float = "3.7.0"
pest = "2.7.2"
pest_derive = "2.7.2"
rand = "0.8.5"
rayon = { version = "1.10.0", optional = true }
rstest = "0.18.1"
stats-cli = "3.0.1"
tempfile = "3.8.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[dev-dependencies]
criterion = "0.5.1"
pprof = { version = "0.14.0", features = ["criterion", "flamegraph"] }


[[bench]]
name = "tree_from_msa"
harness = false
[[bench]]
name = "cost"
harness = false
[[bench]]
name = "topo"
harness = false
[[bench]]
name = "spr"
harness = false
[[bench]]
name = "helpers"
harness = false
[[bench]]
name = "matrix"
harness = false
